[package]
name = "codespaces-blank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
itertool = "0.1.0"
itertools = "0.12.0"
nalgebra = "0.30.1"
ncollide2d = "0.33.0"
ordered-float = "4.2.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["tokio-macros", "rt-multi-thread", "macros"] }
voronoi = "0.1.4"
